--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 html{
     font-size: 62.5%;
+    margin: 0;
 }
 body {
+    color: $dark-grey;
+    line-height: 1.6;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     margin: 0;
